
[package]
authors = ["oxide-ai"]
edition = "2021"
name = "core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Napi bindings
napi = "3.0.0"
napi-derive = "3.0.0"

# Candle ML framework with Metal backend for macOS
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime & Logging
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
